--- a/less/content.less
+++ b/less/content.less
@@ -232,7 +232,8 @@
 				}
 
 				&.views-field-taxonomy-vocabulary-1,
-				&.views-field-field-in-activity {
+				&.views-field-field-in-activity,
+				&.views-field-field-speakers {
 					font-weight: bold;
 				}
 
