Format ministry centre in national carousel

--- a/less/header.less
+++ b/less/header.less
@@ -212,6 +212,12 @@
 						text-shadow: none;
 						right: 0;
 
+						.ministry-centre {
+							font-size: @font-size-h4;
+							font-style: italic;
+							padding-bottom: 8px;
+						}
+
 						// Mobile:
 							height: 150px;
 							bottom: -150px;
