--- a/css/style.css
+++ b/css/style.css
@@ -6818,6 +6818,11 @@ table .checkbox input[type="checkbox"] {
   left: 0;
   padding: 0 10px 0px;
 }
+#page-header .region-header .carousel .carousel-inner .item .carousel-caption .ministry-centre {
+  font-size: 16px;
+  font-style: italic;
+  padding-bottom: 8px;
+}
 @media screen and (min-width: 768px) {
   #page-header .region-header .carousel .carousel-inner .item .carousel-caption {
     height: auto;
