Add CSS for Topic field

--- a/less/content.less
+++ b/less/content.less
@@ -380,6 +380,7 @@
 			min-height: 1px; // prevent an empty field causing the 15px margin being lost
 		}
 
+		.field-name-field-topic,
 		.field-name-field-speakers,
 		.field-name-field-topics,
 		.field-name-field-bible-reference,
