--- a/css/style.css
+++ b/css/style.css
@@ -8186,6 +8186,7 @@ table .checkbox input[type="checkbox"] {
 .content-region .block-system .block-panel .content .field-name-field-date-text {
   min-height: 1px;
 }
+.content-region .block-system .block-panel .content .field-name-field-topic .field-label,
 .content-region .block-system .block-panel .content .field-name-field-speakers .field-label,
 .content-region .block-system .block-panel .content .field-name-field-topics .field-label,
 .content-region .block-system .block-panel .content .field-name-field-bible-reference .field-label,
