--- a/css/style.css
+++ b/css/style.css
@@ -8121,6 +8121,15 @@ table .checkbox input[type="checkbox"] {
   padding: 10px;
 }
 .content-region .block-system .block-panel .content .field-name-field-civievent {
+  position: relative;
+  float: right;
+  clear: right;
+  width: 50%;
+  padding-left: 30px;
+  margin-right: 5px;
+  margin-bottom: 15px;
+}
+.content-region .block-system .block-panel .content .field-name-field-civievent a {
   display: inline-block;
   min-width: 10px;
   padding: 3px 7px;
@@ -8133,21 +8142,25 @@ table .checkbox input[type="checkbox"] {
   text-align: center;
   background-color: #999999;
   border-radius: 10px;
-  font-size: 22px;
+  font-size: 16px;
   background-color: #1e9dd8;
   float: right;
-  margin-right: 5px;
-  padding: 5px 30px;
+  width: 100%;
+  max-width: 280px;
+  padding: 5px;
+  color: white;
 }
-.content-region .block-system .block-panel .content .field-name-field-civievent:empty {
+.content-region .block-system .block-panel .content .field-name-field-civievent a:empty {
   display: none;
 }
-.btn .content-region .block-system .block-panel .content .field-name-field-civievent {
+.btn .content-region .block-system .block-panel .content .field-name-field-civievent a {
   position: relative;
   top: -1px;
 }
-.content-region .block-system .block-panel .content .field-name-field-civievent a {
-  color: white;
+@media screen and (min-width: 400px) {
+  .content-region .block-system .block-panel .content .field-name-field-civievent a {
+    font-size: 22px;
+  }
 }
 .content-region .block-system .block-panel .content .field-name-field-date-text,
 .content-region .block-system .block-panel .content .field-name-field-in-activity {
