--- a/less/content.less
+++ b/less/content.less
@@ -518,3 +518,7 @@
 #block-views-f2076c84f42dfe8435efe1fa2a53a400 {
 	display: none;	// Hide the campus homepage view until it can be disabled
 }
+
+.rtecenter {
+	text-align: center;
+}
