--- a/css/style.css
+++ b/css/style.css
@@ -8310,6 +8310,146 @@ table .checkbox input[type="checkbox"] {
 .content-region .block-system .block-panel .comment-wrapper h3 {
   padding: 0 10px;
 }
+.field-type-tablefield .tablefield-wrapper .tablefield {
+  margin-bottom: 20px;
+  background-color: #ffffff;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+  border-color: #1a3867;
+}
+.field-type-tablefield .tablefield-wrapper .tablefield > .list-group {
+  margin-bottom: 0;
+}
+.field-type-tablefield .tablefield-wrapper .tablefield > .list-group .list-group-item {
+  border-width: 1px 0;
+}
+.field-type-tablefield .tablefield-wrapper .tablefield > .list-group .list-group-item:first-child {
+  border-top-right-radius: 0;
+  border-top-left-radius: 0;
+}
+.field-type-tablefield .tablefield-wrapper .tablefield > .list-group .list-group-item:last-child {
+  border-bottom: 0;
+}
+.field-type-tablefield .tablefield-wrapper .tablefield > .table,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-responsive > .table {
+  margin-bottom: 0;
+}
+.field-type-tablefield .tablefield-wrapper .tablefield > .panel-body + .table,
+.field-type-tablefield .tablefield-wrapper .tablefield > .panel-body + .table-responsive {
+  border-top: 1px solid #dddddd;
+}
+.field-type-tablefield .tablefield-wrapper .tablefield > .table > tbody:first-child th,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table > tbody:first-child td {
+  border-top: 0;
+}
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-bordered,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-responsive > .table-bordered {
+  border: 0;
+}
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-bordered > thead > tr > th:first-child,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-responsive > .table-bordered > thead > tr > th:first-child,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-bordered > tbody > tr > th:first-child,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-responsive > .table-bordered > tbody > tr > th:first-child,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-bordered > tfoot > tr > th:first-child,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-responsive > .table-bordered > tfoot > tr > th:first-child,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-bordered > thead > tr > td:first-child,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-responsive > .table-bordered > thead > tr > td:first-child,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-bordered > tbody > tr > td:first-child,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-responsive > .table-bordered > tbody > tr > td:first-child,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-bordered > tfoot > tr > td:first-child,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-responsive > .table-bordered > tfoot > tr > td:first-child {
+  border-left: 0;
+}
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-bordered > thead > tr > th:last-child,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-responsive > .table-bordered > thead > tr > th:last-child,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-bordered > tbody > tr > th:last-child,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-responsive > .table-bordered > tbody > tr > th:last-child,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-bordered > tfoot > tr > th:last-child,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-responsive > .table-bordered > tfoot > tr > th:last-child,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-bordered > thead > tr > td:last-child,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-responsive > .table-bordered > thead > tr > td:last-child,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-bordered > tbody > tr > td:last-child,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-responsive > .table-bordered > tbody > tr > td:last-child,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-bordered > tfoot > tr > td:last-child,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-responsive > .table-bordered > tfoot > tr > td:last-child {
+  border-right: 0;
+}
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-bordered > thead > tr:last-child > th,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-responsive > .table-bordered > thead > tr:last-child > th,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-bordered > tbody > tr:last-child > th,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-responsive > .table-bordered > tbody > tr:last-child > th,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-bordered > tfoot > tr:last-child > th,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-responsive > .table-bordered > tfoot > tr:last-child > th,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-bordered > thead > tr:last-child > td,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-responsive > .table-bordered > thead > tr:last-child > td,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-bordered > tbody > tr:last-child > td,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-responsive > .table-bordered > tbody > tr:last-child > td,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-bordered > tfoot > tr:last-child > td,
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-responsive > .table-bordered > tfoot > tr:last-child > td {
+  border-bottom: 0;
+}
+.field-type-tablefield .tablefield-wrapper .tablefield > .table-responsive {
+  border: 0;
+  margin-bottom: 0;
+}
+.field-type-tablefield .tablefield-wrapper .tablefield > .panel-heading {
+  color: #ffffff;
+  background-color: #1a3867;
+  border-color: #1a3867;
+}
+.field-type-tablefield .tablefield-wrapper .tablefield > .panel-heading + .panel-collapse .panel-body {
+  border-top-color: #1a3867;
+}
+.field-type-tablefield .tablefield-wrapper .tablefield > .panel-footer + .panel-collapse .panel-body {
+  border-bottom-color: #1a3867;
+}
+.field-type-tablefield .tablefield-wrapper .tablefield thead {
+  color: #ffffff;
+  background-color: #1a3867;
+  border-color: #1a3867;
+}
+.field-type-tablefield .tablefield-wrapper .tablefield thead + .panel-collapse .panel-body {
+  border-top-color: #1a3867;
+}
+.field-type-tablefield .tablefield-wrapper .tablefield thead a {
+  color: white;
+}
+.field-type-tablefield .tablefield-wrapper .tablefield tbody {
+  padding: 15px;
+}
+.field-type-tablefield .tablefield-wrapper .tablefield tbody:before,
+.field-type-tablefield .tablefield-wrapper .tablefield tbody:after {
+  content: " ";
+  display: table;
+}
+.field-type-tablefield .tablefield-wrapper .tablefield tbody:after {
+  clear: both;
+}
+.field-type-tablefield .tablefield-wrapper .tablefield tbody:before,
+.field-type-tablefield .tablefield-wrapper .tablefield tbody:after {
+  content: " ";
+  display: table;
+}
+.field-type-tablefield .tablefield-wrapper .tablefield tbody:after {
+  clear: both;
+}
+.field-type-tablefield .tablefield-wrapper .table {
+  border-collapse: inherit;
+}
+.field-type-tablefield .tablefield-wrapper .table > thead > tr > th,
+.field-type-tablefield .tablefield-wrapper .table > tbody > tr > th,
+.field-type-tablefield .tablefield-wrapper .table > tfoot > tr > th,
+.field-type-tablefield .tablefield-wrapper .table > thead > tr > td,
+.field-type-tablefield .tablefield-wrapper .table > tbody > tr > td,
+.field-type-tablefield .tablefield-wrapper .table > tfoot > tr > td {
+  border: 0px;
+}
+.field-type-tablefield .tablefield-wrapper .table-striped > tbody > tr:nth-child(2n+1) > td {
+  background-color: inherit;
+}
 .form-item,
 .mollom-privacy {
   margin-bottom: 10px;
