Add clear: both; to tablefield fields

--- a/css/style.css
+++ b/css/style.css
@@ -8311,7 +8311,7 @@ table .checkbox input[type="checkbox"] {
   padding: 0 10px;
 }
 .field-type-tablefield {
-  clear: right;
+  clear: both;
 }
 .field-type-tablefield .tablefield-wrapper .tablefield {
   margin-bottom: 20px;
