Undo limiting form controls to 100px as it breaks dropdowns

--- a/less/content.less
+++ b/less/content.less
@@ -198,11 +198,12 @@
 				.views-exposed-widget {
 					padding: 0;
 					margin: 10px 10px 0;
-
+/*
 					.container-inline-date .form-text,
 					.form-type-select .form-select {
 							width: 100px;
 					}
+*/
 				}
 			}
 
