--- a/less/content.less
+++ b/less/content.less
@@ -190,6 +190,24 @@
 	.block-views,
 	.block-system {
 		.block-panel {
+			.view-header {
+				.well;
+				.h1;
+
+				padding-left: 70px;
+
+				color:			@cbf-dark-blue;
+				background-color:	@cbf-content-blue;
+				border-color:		@cbf-sidebar-blue;
+			}
+
+			.view-empty {
+				.well;
+				.lead;
+
+				padding-left: 70px;
+			}
+
 			.view-content {
 				padding: 0 10px 10px 10px;
 			}
@@ -198,12 +216,6 @@
 				.views-exposed-widget {
 					padding: 0;
 					margin: 10px 10px 0;
-/*
-					.container-inline-date .form-text,
-					.form-type-select .form-select {
-							width: 100px;
-					}
-*/
 				}
 			}
 
