Make space in main menu for Library entry

--- a/less/header.less
+++ b/less/header.less
@@ -56,18 +56,18 @@
 
 			.leaf {
 				a {
-					padding: 10px;
+					padding: 5px;
 
 					@media @tablet {
-						padding-top: 24px;
+						padding: 24px 5px 10px;
 					}
 					@media @normal {
-						font-size: @font-size-h2;
-						padding-top: 26px;
+						font-size: @font-size-h3;
+						padding: 26px 7px 10px;
 					}
 					@media @wide {
 						font-size: @font-size-h1;
-						padding-top: 30px;
+						padding: 30px 10px 10px;
 					}
 				}
 			}
