--- a/css/style.css
+++ b/css/style.css
@@ -6659,23 +6659,23 @@ table .checkbox input[type="checkbox"] {
   background-color: inherit;
 }
 #navbar .navbar-collapse .navbar-nav .leaf a {
-  padding: 10px;
+  padding: 5px;
 }
 @media screen and (min-width: 768px) {
   #navbar .navbar-collapse .navbar-nav .leaf a {
-    padding-top: 24px;
+    padding: 24px 5px 10px;
   }
 }
 @media screen and (min-width: 992px) {
   #navbar .navbar-collapse .navbar-nav .leaf a {
-    font-size: 20px;
-    padding-top: 26px;
+    font-size: 18px;
+    padding: 26px 7px 10px;
   }
 }
 @media screen and (min-width: 1200px) {
   #navbar .navbar-collapse .navbar-nav .leaf a {
     font-size: 22px;
-    padding-top: 30px;
+    padding: 30px 10px 10px;
   }
 }
 #navbar .navbar-collapse .region-navigation {
