--- a/less/header.less
+++ b/less/header.less
@@ -278,6 +278,10 @@
 
 
 .library-header-outer:after {
+	position: relative;
+}
+
+.library-header-outer:after {
 	color: (@cbf-content-blue + 3*@cbf-light-blue)/4;
 	content: "\f19c";
 	font-family: FontAwesome;
