Hide title for campus-homepage view pages

--- a/less/content.less
+++ b/less/content.less
@@ -574,6 +574,10 @@
 	display: none;	// Hide the campus homepage view until it can be disabled
 }
 
+.page-city .page-header {
+	display: none;	// Hide the campus homepage view until it can be disabled
+}
+
 .rtecenter {
 	text-align: center;
 }
