--- a/less/content.less
+++ b/less/content.less
@@ -201,7 +201,7 @@
 				border-color:		@cbf-sidebar-blue;
 			}
 
-			.view-empty {
+			.view-national-library .view-empty {
 				.well;
 				.lead;
 
