--- a/less/content.less
+++ b/less/content.less
@@ -400,6 +400,10 @@
 			margin-bottom: 15px;
 		}
 
+		.field-name-field-video {
+			clear: both;
+		}
+
 		.field-name-field-in-activity + .field-name-field-date-text
 		{
 			margin-top: -15px;
@@ -415,7 +419,10 @@
 		.field-name-field-bible-reference,
 		.field-name-field-episode-date {
 			.field-label {
-				width: 150px;
+				width: 30%;
+			}
+			.field-items {
+				width: 70%;
 			}
 		}
 
