--- a/css/style.css
+++ b/css/style.css
@@ -8694,6 +8694,28 @@ textarea.webform-component input.email {
 .crm-container.crm-public .select2-container .select2-choice {
   height: auto !important;
 }
+.progress.payment {
+  width: 100%;
+  background-color: #d8eaf9;
+  height: auto;
+  margin: 20px 0;
+}
+.progress.payment .progress-bar {
+  width: 33.33%;
+  padding: 5px;
+  font-size: inherit;
+}
+.progress.payment .progress-bar.past {
+  color: #d8eaf9;
+}
+.progress.payment .progress-bar.present {
+  font-weight: bold;
+  background-color: #1e9dd8;
+}
+.progress.payment .progress-bar.future {
+  color: black;
+  background-color: #d8eaf9;
+}
 .footer {
   border: 0px;
   margin-top: 0px;
