--- a/less/header.less
+++ b/less/header.less
@@ -218,7 +218,7 @@
 
 						.ministry-centre {
 							font-size: @font-size-h4;
-							font-style: italic;
+							font-style: italic !important;
 							padding-bottom: 8px;
 						}
 
