--- a/less/header.less
+++ b/less/header.less
@@ -218,8 +218,11 @@
 
 						.ministry-centre {
 							font-size: @font-size-h4;
-							font-style: italic !important;
 							padding-bottom: 8px;
+
+							a {
+								font-style: italic;
+							}
 						}
 
 						// Mobile:
