--- a/less/content.less
+++ b/less/content.less
@@ -367,8 +367,11 @@
 			}
 		}
 
-		.field-name-field-date-text,
 		.field-name-field-in-activity {
+			font-size: @font-size-h3;
+		}
+
+		.field-name-field-date-text {
 			font-weight: bold;
 		}
 
