Add RSS and Apple icons

--- a/less/footer.less
+++ b/less/footer.less
@@ -79,6 +79,12 @@
 					&.instagram-icon {
 						color: #404042;
 					}
+					&.rss-icon {
+						color: #E65C24;
+					}
+					&.apple-icon {
+						color: #666666;
+					}
 				}
 			}
 		}
