--- a/css/style.css
+++ b/css/style.css
@@ -8944,6 +8944,14 @@ textarea.webform-component input.email {
 .footer .region-footer .social-media li a:focus.instagram-icon {
   color: #404042;
 }
+.footer .region-footer .social-media li a:hover.rss-icon,
+.footer .region-footer .social-media li a:focus.rss-icon {
+  color: #E65C24;
+}
+.footer .region-footer .social-media li a:hover.apple-icon,
+.footer .region-footer .social-media li a:focus.apple-icon {
+  color: #666666;
+}
 .footer .region-footer .seo {
   float: left;
   width: 100%;
