--- a/less/content.less
+++ b/less/content.less
@@ -22,7 +22,7 @@
 	.region-content {
 		.make-row();
 
-		.block-views {
+		.block-views, .block-block {
 			.make-xs-column(12);
 			.make-sm-column(12);
 			.make-md-column(6);
