--- a/less/content.less
+++ b/less/content.less
@@ -367,6 +367,20 @@
 				color: white;
 			}
 
+			.dropdown-menu {
+				margin: 36px 8px 0;
+
+				a {
+					font-size: @font-size-h4;
+					background-color: white;
+					float: none;
+					width: auto;
+					max-width: auto;
+					color: @cbf-dark-blue;
+					font-weight: normal;
+				}
+			}
+
 			a + a {
 				margin-top: 15px;
 			}
