--- a/less/content.less
+++ b/less/content.less
@@ -370,6 +370,10 @@
 			.dropdown-menu {
 				margin: 36px 8px 0;
 
+				.dropdown-submenu .dropdown-menu {
+					margin: 0px 8px 0;
+				}
+
 				a {
 					font-size: @font-size-h4;
 					background-color: white;
